Bug 361348 - when internet connection name is changed, internet connection icon tooltip is still showing previous internet connection name
Summary: when internet connection name is changed, internet connection icon tooltip is...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_networkmanagement (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Jan Grulich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-03 14:47 UTC by Patrick Silva
Modified: 2024-12-23 18:27 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2016-04-03 14:47:30 UTC
when internet connection name is changed, internet connection icon popup is still showing previous internet connection name

Reproducible: Always

Steps to Reproduce:
right click on network icon in plasma panel
select the option to set the network connections
change your internet connection name (I use a wired internet connection)
Click OK to save the change
Put your mouse pointer on the network icon

Actual Results:  
Network icon popup shows the previous internet connection name.

Expected Results:  
Network icon popup shows the new internet connection name.
Comment 1 Patrick Silva 2016-04-03 14:52:03 UTC
Third step to reproduce: right click on your internet connection, select "Edit"
Comment 2 Jan Grulich 2016-04-04 08:25:23 UTC
I'm not able to reproduce this. Did the name get changed in the editor? The only place where it doesn't get changed is tin the tooltip for me.
Comment 3 Patrick Silva 2016-04-04 14:44:30 UTC
(In reply to Jan Grulich from comment #2)
> The only place where it doesn't get changed is tin the tooltip for me.
This is the bug that I am reporting here.
Comment 4 Jan Grulich 2016-04-04 18:54:07 UTC
Git commit 50c40395be520c56ae9d1783c4861f7492b8fa6c by Jan Grulich.
Committed on 04/04/2016 at 18:53.
Pushed by grulich into branch 'master'.

Update tooltip when connection name gets changed

M  +4    -1    libs/declarative/networkstatus.cpp

http://commits.kde.org/plasma-nm/50c40395be520c56ae9d1783c4861f7492b8fa6c
Comment 5 Jan Grulich 2016-04-04 18:54:38 UTC
Git commit d5d1aa64a3929d00ad8b4fb97f8855b1ba69dccb by Jan Grulich.
Committed on 04/04/2016 at 18:54.
Pushed by grulich into branch 'Plasma/5.6'.

Update tooltip when connection name gets changed

M  +4    -1    libs/declarative/networkstatus.cpp

http://commits.kde.org/plasma-nm/d5d1aa64a3929d00ad8b4fb97f8855b1ba69dccb