Update tooltip when connection name gets changed

BUG:361348